@@ -1,3 +1,8 @@
+2019-12-28  Dirk Eddelbuettel  <edd@debian.org>
+
+	* local/scripts/CreateBoost.sh (boostinstall): Remove old boost
+	installation to always create a fresh installation
+
 2019-12-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 1.72.0-2
